nb-virtdata/virtdata-lang/src/main/java/io/nosqlbench/virtdata/lang/grammars/VirtData.g4
grammar VirtData;
// https://www.youtube.com/watch?v=eW4WFgRtFeY

virtdataRecipe : virtdataFlow (specend virtdataFlow?)* EOF ;

virtdataFlow : (COMPOSE)? expression (';' expression? | WS? expression)* ;

expression : (lvalue ASSIGN)? virtdataCall ;

virtdataCall :
 ( inputType TYPEARROW )?
 ( funcName '(' (WS? cmdParam ( WS? ',' WS? cmdParam )* WS? )? WS? ')' )
 ( TYPEARROW outputType )? WS?
 ;

lvalue : ID;
inputType : ID;
funcName: ID;
outputType : ID;

cmdParam : ( value | virtdataCall | ref );
ref : ('$' ID );
value : ( floatValue | doubleValue | integerValue | longValue | stringValue | booleanValue);
stringValue : SSTRING_LITERAL | DSTRING_LITERAL ;
longValue: LONG;
doubleValue: DOUBLE;
integerValue: INTEGER;
floatValue: FLOAT;
booleanValue: BOOLEAN;

LONG : '-'? INT ('l'|'L') ;
DOUBLE
    :   ('-'? INT '.' '0'* INT EXP? | '-'? INT EXP | '-'? INT ) ('d'|'D') ;
INTEGER : '-'? INT ;
FLOAT
    :   ('-'? INT '.' '0'* INT EXP? | '-'? INT EXP | '-'? INT ) ('f'|'F')? ;
BOOLEAN : 'true' | 'false';

fragment INT :   '0' | [1-9] [0-9]* ; // no leading zeros
fragment ZINT : [0-9]* ; // leading zeroes
fragment EXP :   [Ee] [+\-]? INT ;

specend: ( ';;' NEWLINE+ ) | ';;' | NEWLINE+ ;

NEWLINE   : '\r' '\n' | '\n' | '\r';

COMPOSE: 'compose' ;
TYPEARROW: '->' ;
ASSIGN: '=';
SSTRING_LITERAL : '\'' (~('\'' | '\\' | '\r' | '\n') | '\\' ('\'' | '\\' | . ))* '\'';
DSTRING_LITERAL : '"' (~('"' | '\\' | '\r' | '\n') | '\\' ('"' | '\\' | .))* '"';

// IDs can start with letters, contain numbers, dashes, and
// underscores, but not end with a dash
ID: IDPART ('.' IDPART)* ;
IDPART:  ( ( [a-zA-Z] [0-9a-zA-Z_]* )
 | ( [a-zA-Z] [0-9a-zA-Z_]* '-' [0-9a-zA-Z_]) )
 ;

// include form feed
WS : [\u000C \t\n]+ -> channel(HIDDEN);
// NL : [\r\nu000C]
